--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -13,28 +12,34 @@
         android:id="@+id/mainImage"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:focusable="true"
         android:src="@drawable/image1"
         android:scaleType="centerCrop"
         android:clickable="true"/>
 
     <ImageView
-        android:id="@+id/iconImage"
+        android:id="@+id/iconImage1"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:focusable="true"
         android:src="@drawable/icon1"
         android:layout_marginTop="20dp"
         android:clickable="true"/>
+
     <ImageView
         android:id="@+id/iconImage2"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:focusable="true"
         android:src="@drawable/icon2"
         android:layout_marginTop="20dp"
         android:clickable="true"/>
+
     <ImageView
         android:id="@+id/iconImage3"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:focusable="true"
         android:src="@drawable/icon3"
         android:layout_marginTop="20dp"
         android:clickable="true"/>
